--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ url: "https://at-cg.github.io"
 
 author: Chirag Jain # change to your full name
 
-avatar: /headshot.PNG # support internet resources
+avatar: /headshot.jpg # support internet resources
 
 github:
   username: cjain7 # change to your github username
