--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 
 title: Chirag Jain # the main title
 
-tagline: Assistant professor # it will display as the sub-title
+tagline: Assistant Professor # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   Chirag Jain
